--- a/AgileLink/AgileLink/App.config
+++ b/AgileLink/AgileLink/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <connectionStrings>
+    <add name="DefaultConnection"
+        connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=D:\TEMP\_ISTVÁN\AGILELINKPOC\AGILELINK\AGILELINK\AGILELINK_DB.MDF;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+        providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
