--- a/BeLazy/BeLazy/App.config
+++ b/BeLazy/BeLazy/App.config
@@ -5,7 +5,7 @@
     </startup>
   <connectionStrings>
     <add name="DefaultConnection"
-        connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=D:\TEMP\_ISTVÁN\AGILELINKPOC\AGILELINK\AGILELINK\AGILELINK_DB.MDF;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+        connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=D:\TEMP\_ISTVÁN\BeLazyPOC\BeLazy\BeLazy\BeLazy_DB.MDF;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
         providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
