Transact downlink tested

--- a/BeLazy/BeLazy/BeLazy.csproj
+++ b/BeLazy/BeLazy/BeLazy.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StatsHelper.cs" />
     <Compile Include="SyncAction.cs" />
     <Compile Include="SyncLinkProcessor.cs" />
     <Compile Include="TransactDownloadInterface.cs" />
