--- a/BeLazy/BeLazy/BeLazy.csproj
+++ b/BeLazy/BeLazy/BeLazy.csproj
@@ -54,11 +54,12 @@
     <Compile Include="DownlinkManager.cs" />
     <Compile Include="Link.cs" />
     <Compile Include="Log.cs" />
-    <Compile Include="MappingHelper.cs" />
+    <Compile Include="MappingManager.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScriptingHelper.cs" />
     <Compile Include="StatsHelper.cs" />
     <Compile Include="SyncAction.cs" />
     <Compile Include="SyncLinkProcessor.cs" />
